Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100790

tst_QInputDevice::multiSeatDevices() fails on Wayland

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.3.0 Beta3, 6.3, 6.4
    • 6.4
    • QPA: Wayland
    • None
    • Linux/Wayland
    • 9c6b986d967b42bea5faca0d9fa1000c7edb023e(dev) b922234cadace0f388e4b2b5eeae35fcf85f92c0(6.3) b922234cad (qt/qtbase/6.3) 9c6b986d96 (qt/qtbase/dev) b922234cad (qt/tqtc-qtbase/6.3) 9c6b986d96 (qt/tqtc-qtbase/dev) b922234cad (qt/tqtc-qtbase/6.3.0)

      Latest build of dev branches, GNOME 41.2 on wayland, Manjaro

      ********* Start testing of tst_QInputDevice *********
      Config: Using QtTest library 6.4.0, Qt 6.4.0 (x86_64-little_endian-lp64 shared (dynamic) debug build; by GCC 11.1.0), manjaro unknown
      PASS   : tst_QInputDevice::initTestCase()
      FAIL!  : tst_QInputDevice::multiSeatDevices() Compared values are not the same
         Actual   (QInputDevice::primaryKeyboard()->systemId()): 8589934593
         Expected (qint64(1) << 33)                            : 8589934592
         Loc: [/home/liangqi/qt/qt5/qtbase/tests/auto/gui/kernel/qinputdevice/tst_qinputdevice.cpp(76)]
      PASS   : tst_QInputDevice::cleanupTestCase()
      Totals: 2 passed, 1 failed, 0 skipped, 0 blacklisted, 2ms
      ********* Finished testing of tst_QInputDevice *********
      

        For Gerrit Dashboard: QTBUG-100790
        # Subject Branch Project Status CR V

            liaqi Liang Qi
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: